--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,16 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: stretch;
+  justify-content: stretch;
+  align-items: center;
+  align-content: center;
 
   min-width: 700px;
+  
+}
+
+#btnLoadMore {
+  margin: 20px;
+  width: 200px;
+  height: 50px;
 }
