--- a/src/Body/BeerCard/BeerCard.css
+++ b/src/Body/BeerCard/BeerCard.css
@@ -1,11 +1,28 @@
 .beer-list__beer-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.6fr 0.4fr 2fr;
+  gap: 5px 5px;
+  grid-template-areas:
+    "image image name name name"
+    "image image abv abv abv"
+    "description description description description description";
+
   width: 300px;
   height: 400px;
   border: 1px solid;
   border-radius: 10px;
-  margin: 5px;
+  margin: 20px;
   padding: 10px;
-  overflow-y: auto;
+}
+
+.beer-list__beer-card:hover {
+  transition: 300ms;
+  transform: scale(1.1);
+}
+
+.beer-list__beer-card:not(:hover) {
+  transition: 300ms;
 }
 
 .beer-name {
@@ -26,6 +43,15 @@
   margin: 10px 20px;
 }
 
-.beer-description {
+.container-beer-description {
   grid-area: description;
+  margin-top: 40px;
+  overflow-y: auto;
+
+  border: 1px solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.beer-description {
 }
