--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,18 @@
   align-content: center;
 
   min-width: 700px;
-  
 }
 
 #btnLoadMore {
   margin: 20px;
   width: 200px;
   height: 50px;
+
+  background-color: rgb(35, 51, 54);
+  border-radius: 8px;
+  box-shadow: 1px 1px 1px 1px black;
+  border: 1px solid rgb(35, 51, 54);
+  color: antiquewhite;
+  font-size: larger;
+  font-weight: bold;
 }
