--- a/src/Body/BeerCard/BeerCard.css
+++ b/src/Body/BeerCard/BeerCard.css
@@ -1,5 +1,16 @@
 .beer-list__beer-card {
   display: grid;
+  width: 300px;
+  height: 400px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid;
+  border: 1px solid rgb(35, 51, 54);
+  border-radius: 10px;
+  color: blanchedalmond;
+  background-color: rgb(28, 28, 28);
+  box-shadow: 2px 2px 8px 3px black;
+
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.6fr 0.4fr 2fr;
   gap: 5px 5px;
@@ -7,13 +18,6 @@
     "image image name name name"
     "image image abv abv abv"
     "description description description description description";
-
-  width: 300px;
-  height: 400px;
-  border: 1px solid;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 10px;
 }
 
 .beer-list__beer-card:hover {
@@ -26,10 +30,9 @@
 }
 
 .beer-name {
-  grid-area: name;
-
-  font-size: larger;
   font-weight: bold;
+  font-size: larger;
+  grid-area: name;
 }
 
 .beer-abv {
@@ -37,21 +40,45 @@
 }
 
 .beer-img {
-  grid-area: image;
-  height: 150px;
   float: left;
-  margin: 10px 20px;
+  width: 60px;
+  height: 150px;
+  margin: 10px 0;
+  padding: 3px 10px;
+  border: 1px solid rgb(35, 51, 54);
+  border-radius: 8px;
+  background-color: rgb(35, 51, 54);
+  box-shadow: 1px 1px 1px 1px black;
+  grid-area: image;
 }
 
 .container-beer-description {
-  grid-area: description;
   margin-top: 40px;
-  overflow-y: auto;
-
-  border: 1px solid;
-  border-radius: 10px;
   padding: 10px;
+  border: 1px solid;
+  border: 1px solid rgb(35, 51, 54);
+  border-radius: 10px;
+  overflow-y: auto;
+  background-color: rgb(35, 51, 54);
+  box-shadow: 2px 2px 2px 2px black;
+  grid-area: description;
+}
+
+.container-beer-description::-webkit-scrollbar {
+  width: 8px;
+}
+
+.container-beer-description::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+.container-beer-description::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  outline: none;
+  background-color: burlywood;
 }
 
 .beer-description {
+  font-weight: 500;
 }
