--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,27 +1,49 @@
 .header {
-  height: 50px;
-  min-width: 700px;
-  width: 100vw;
-
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   align-content: stretch;
-
-  list-style: none;
-  background: #fdc866;
+  width: 100vw;
+  min-width: 700px;
+  height: 50px;
   padding: 0;
+  list-style: none;
+  color: antiquewhite;
+  background: rgb(35, 51, 54);
 }
 
 .header > ul {
-  font-size: larger;
   display: flex;
+  justify-content: space-around;
   align-content: center;
+  font-size: larger;
 }
 
 .header > li {
   display: inline-block;
+  width: 200px;
   margin: 5px 10px;
+}
+
+li * {
+  display: flex;
+  justify-content: center;
+  width: 190px;
+  height: 30px;
+  padding: 0 5px;
+  border-radius: 8px;
+  outline: none;
+  color: burlywood;
+  background-color: rgb(35, 51, 54);
+  font-weight: 600;
+}
+
+li > select {
+  font-size: 16px;
+}
+
+li > input {
+  font-size: 16px;
 }
