--- a/src/Popup/Popup.css
+++ b/src/Popup/Popup.css
@@ -1,30 +1,25 @@
 #popup {
-  /* display: none; */
+  z-index: 1;
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 #popup-form {
   display: flex;
-
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
   align-content: stretch;
-
-  margin: 200px auto;
-
-  background-color: rgb(28, 28, 28);
-  border-radius: 8px;
-  border: 2px solid burlywood;
-  color: blanchedalmond;
-
-  width: 300px;
+  width: 350px;
   height: 450px;
+  margin: 200px auto;
+  border: 2px solid burlywood;
+  border-radius: 8px;
+  color: blanchedalmond;
+  background-color: rgb(28, 28, 28);
 }
 
 #popup-form * {
@@ -34,10 +29,13 @@
 }
 
 #popup-form > input {
-  background-color: rgb(35, 51, 54);
-  margin-top: 0;
+  width:  250px;
   height: 20px;
+  margin-top: 0;
   padding-left: 10px;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: rgb(35, 51, 54);
 }
 
 #popup-form > button {
